--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "eruda": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "eslint-plugin-react": "^7.33.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
