--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # World ID verification (base URL has a sensible default, secrets come from env)
 worldid.base-url=${WORLD_ID_BASE_URL:https://developer.worldcoin.org/api/v1}
-worldid.api-key=${https://developer.worldcoin.org/api/v2/verify/{app_9650c1a16e237405fc9803cfe1c5f1be}}
-worldid.app-id=${app_9650c1a16e237405fc9803cfe1c5f1be}
+worldid.api-key=https://developer.worldcoin.org/api/v2/verify/{app_9650c1a16e237405fc9803cfe1c5f1be}
+worldid.app-id=app_9650c1a16e237405fc9803cfe1c5f1be
