--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 AUTH_SECRET="" # Added by `npx auth secret`. Read more: https://cli.authjs.dev
 HMAC_SECRET_KEY='some-secret' # create this by running `openssl rand -base64 32`
 AUTH_URL='' # For testing this should be your NGROK URL and for production this should be your production URL
-NEXT_PUBLIC_APP_ID='app_1234567890' # APP ID from the developer portal
+NEXT_PUBLIC_APP_ID='app_9650c1a16e237405fc9803cfe1c5f1be' # APP ID from the developer portal
+NEXT_PUBLIC_BACKEND_URL='ec2-13-125-245-242.ap-northeast-2.compute.amazonaws.com' # Base URL for the Spring backend (used by the frontend)
